# kankio

./: .env.example  .gitignore  KURULUM.md  MIMARI.md  OPERASYON.md  README.md  build-desktop.ps1  composer.json  debug_role.py  deploy.py  deploy.sh  log.md  nginx.conf.example  package-lock.json  package.json  vite.config.js  vps-setup.sh
app/Events/: GameSessionUpdated.php  MessageDeleted.php  MessageSent.php  MessagesRead.php  MusicStateChanged.php  StayConnectedSurpriseTriggered.php  UserTyping.php  VoiceMuteChanged.php  VoiceParticipantUpdated.php  VoiceSignalEvent.php  VoiceStateChanged.php
app/Models/: AdminAction.php  Announcement.php  AppRelease.php  BaglantiKalContent.php  Bot.php  GameParticipant.php  GameRound.php  GameSession.php  GameSubmission.php  InviteCode.php  Message.php  PushSubscription.php  Room.php  RoomBot.php  RoomMusicState.php  User.php
app/Providers/: AppServiceProvider.php
app/Services/: AdminAuditService.php  RoomAccessService.php
app/Support/: AppMetrics.php
bootstrap/: app.php
config/: cors.php  isimsehir.php  logging.php  reverb.php  services.php
database/factories/: UserFactory.php
database/migrations/: 0001_01_01_000000_create_users_table.php  2024_01_01_000010_create_rooms_table.php  2024_01_01_000011_create_room_members_table.php  (+23 more)
public/: index.shared.php  manifest.json  sw.js
routes/: channels.php  console.php  web.php
src-tauri/: Cargo.toml  PKGBUILD  build-linux.sh  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
(+69 files in other folders)
